--- a/Key/Key.entitlements
+++ b/Key/Key.entitlements
@@ -7,8 +7,6 @@
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
 	<key>keychain-access-groups</key>
-	<array>
-		<string>$(AppIdentifierPrefix)org.purejava.Key</string>
-	</array>
+	<array/>
 </dict>
 </plist>
